module GRASP: Information expert and Creator were added

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>stream</module>
         <module>solid</module>
+        <module>grasp</module>
     </modules>
 
     <properties>
