--- a/spring5-ch7-hibernateDemo/pom.xml
+++ b/spring5-ch7-hibernateDemo/pom.xml
@@ -52,6 +52,21 @@
             <artifactId>spring-orm</artifactId>
             <version>5.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
